--- a/style.css
+++ b/style.css
@@ -25,26 +25,23 @@ nav{
 }
 
 main{
-    /* height: 100vh; */
+    height: fit-content;
     width: 100%;
     background-color: pink;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     padding: 20px;
     .card-wrapper{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        width: 80%;
-        background-color: blanchedalmond;
+        width: 100%;
         .card{
-            height: 500px;
-            width: 400px;
+            margin: 20px;
             border: 1px black solid;
             border-radius: 25px;
-            margin: 20px;
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -79,3 +76,52 @@ main{
     }
 }
 
+@media screen and (min-width:1059px) {
+    .card{
+        height: clamp(400px, 5vh,500px);
+        width: clamp(300px, 5vh,450px);
+    }
+}
+@media screen and (max-width:1060px) {
+    .card{
+        height: clamp(250px, 80vh,350px);
+        width: clamp(150px, 70vh,250px);
+    }
+}
+@media screen and (max-width:910px) {
+    .card{
+        height: clamp(150px, 80vh,300px);
+        width: clamp(50px, 70vh,200px);
+    }
+}
+
+@media screen and (max-width:768px){
+    .card{
+        background-color: red;
+        height: clamp(250px, 80vh,350px);
+        width: clamp(150px, 70vh,250px);
+    }
+}
+@media screen and (max-width:620px){
+    .card{
+        background-color: green;
+        height: clamp(200px, 80vh,300px);
+        width: clamp(100px, 70vh,200px);
+    }
+}
+@media screen and (max-width:520px){
+    .card{
+        background-color: green;
+        height: clamp(150px, 50vw,250px);
+        width: clamp(50px,40vw,150px);
+        margin: 5px;
+    }
+}
+
+@media screen and (max-width:426px){
+    .card{
+        background-color: blue;
+        height: clamp(150px, 100vw,300px);
+        width: clamp(50px,100vw,200px);
+    }
+}
